--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-notifier",
-  "version": "0.0.9",
+  "version": "0.1.2",
   "description": "Update notifications for Arvis extension",
   "main": "dist/index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "cache-conf": "^0.6.0",
+    "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "latest-version": "^5.1.0",
     "read-pkg": "^2.0.0",
