--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-notifier",
-  "version": "0.1.2",
+  "version": "0.1.9",
   "description": "Update notifications for Arvis extension",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "dist/**",
     "index.d.ts",
     "README.md",
-    "package.json",
     "LICENSE"
   ],
   "repository": {
@@ -39,7 +38,7 @@
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "latest-version": "^5.1.0",
-    "read-pkg": "^2.0.0",
+    "pkg-dir": "^5.0.0",
     "semver": "^7.3.5"
   }
 }
