--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jopemachine/arvis-notifier",
-  "version": "0.2.1",
+  "name": "arvis-notifier",
+  "version": "0.0.1",
   "description": "Update notifications for Arvis extension",
   "main": "dist/index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   },
   "keywords": [
     "arvis",
+    "arvis-extension",
     "arvish"
   ],
   "author": "jopemachine",
