--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-notifier",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Update notifications for Arvis extension",
   "main": "dist/index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "cache-conf": "^0.6.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
+    "json5": "^2.2.0",
     "latest-version": "^5.1.0",
     "pkg-dir": "^5.0.0",
     "semver": "^7.3.5"
